--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -8,6 +8,15 @@ Known Issues
 - Available @ https://sourceforge.net/p/alttabalternative/tickets/
 
 
+2017.2 new features and bug fixes
+---------------------------------
++ Can specify group of similar applications to switch between these windows
+  using Alt+Backtick / Alt+Shift+Backtick.
+  Ex | Switch between notepad.exe/notepad++.exe processes using Alt+Backtick if
+     | notepad.exe and notepad++.exe are marked as similar processes.
++ Removed system menu for Alt+Tab window.
++ Always Run At Startup when the application starts.
+
 2017.1 new features and bug fixes
 ---------------------------------
 + Introduced new hotkey Alt+Backtick, Alt+Shift+Backtick to switch
